Selectable percentage view mode

--- a/site/index.html
+++ b/site/index.html
@@ -93,6 +93,12 @@
                         <span class="stat-value" id="stat-r2">0.896</span>
                         <span class="stat-label">R² (מידת התאמה)</span>
                     </div>
+                    <div class="stat-item toggle-item">
+                        <button class="percent-toggle" id="percent-toggle">
+                            <span class="toggle-label">תצוגת אחוזים:</span>
+                            <span class="toggle-value" id="toggle-value">מהבחירות הקודמות</span>
+                        </button>
+                    </div>
                 </div>
             </div>
 
