Add scatterplot view and d'Hondt calculator

--- a/site/index.html
+++ b/site/index.html
@@ -30,6 +30,8 @@
                 <nav class="view-switcher">
                     <span class="view-btn active">תרשים סנקי</span>
                     <a href="tsne.html" class="view-btn">מפת קלפיות</a>
+                    <a href="scatter.html" class="view-btn">השוואת מפלגות</a>
+                    <a href="dhondt.html" class="view-btn">מחשבון באדר-עופר</a>
                 </nav>
             </div>
         </header>
@@ -176,5 +178,8 @@
     </div>
 
     <script src="sankey.js"></script>
+
+    <!-- Buy Me a Coffee widget -->
+    <script data-name="BMC-Widget" data-cfasync="false" src="https://cdnjs.buymeacoffee.com/1.0.0/widget.prod.min.js" data-id="harelc" data-description="Support me on Buy me a coffee!" data-message="אם אהבתם את הפרוייקט ואתם רוצים לעזור לקדם אותו ולתמוך בהוצאות האתר, קנו לי כוס קפה ☕" data-color="#3b82f6" data-position="Left" data-x_margin="18" data-y_margin="18"></script>
 </body>
 </html>
