Update button text and footer

--- a/site/index.html
+++ b/site/index.html
@@ -28,7 +28,7 @@
                 </h1>
                 <p class="site-subtitle">ניתוח מעבר קולות בין בחירות לכנסת ישראל</p>
                 <nav class="view-switcher">
-                    <span class="view-btn active">תרשים סנקי</span>
+                    <span class="view-btn active">נדידת קולות</span>
                     <a href="tsne.html" class="view-btn">מפת קלפיות</a>
                     <a href="scatter.html" class="view-btn">השוואת מפלגות</a>
                     <a href="dhondt.html" class="view-btn">מחשבון באדר-עופר</a>
@@ -170,7 +170,7 @@
                     המודל מחשב הסתברויות מעבר תחת האילוץ שסכום ההסתברויות מכל מפלגה שווה ל-1.
                 </p>
                 <p class="credits">
-                    נוצר על ידי הראל קין |
+                    כל הזכויות שמורות להראל קין |
                     <a href="https://github.com/harelc/elections-vote-transfer/" target="_blank">קוד מקור</a>
                 </p>
             </div>
