Add CC BY-NC-SA 4.0 license link to all page footers

--- a/site/index.html
+++ b/site/index.html
@@ -33,6 +33,7 @@
                 <a href="tsne.html" class="view-btn">מפת קלפיות</a>
                 <a href="scatter.html" class="view-btn">השוואת מפלגות</a>
                 <a href="dhondt.html" class="view-btn">מחשבון באדר-עופר</a>
+                <a href="irregular.html" class="view-btn">קלפיות חריגות</a>
                 <button class="export-btn header-export" id="export-png">📷 ייצוא PNG</button>
             </nav>
         </header>
@@ -171,7 +172,8 @@
                     המודל מחשב הסתברויות מעבר תחת האילוץ שסכום ההסתברויות מכל מפלגה שווה ל-1.
                 </p>
                 <p class="credits">
-                    כל הזכויות שמורות להראל קין |
+                    © הראל קין |
+                    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0</a> |
                     <a href="https://github.com/harelc/elections-vote-transfer/" target="_blank">קוד מקור</a>
                 </p>
             </div>
