--- a/site/scatter.html
+++ b/site/scatter.html
@@ -718,7 +718,8 @@
                     קו המגמה (מקווקו) מציג את קו הרגרסיה הליניארית.
                 </p>
                 <p class="credits">
-                    כל הזכויות שמורות להראל קין |
+                    © הראל קין |
+                    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0</a> |
                     <a href="https://github.com/harelc/elections-vote-transfer/" target="_blank">קוד מקור</a>
                 </p>
             </div>
