--- a/site/tsne.html
+++ b/site/tsne.html
@@ -904,7 +904,8 @@
                     גודל הנקודה משקף את מספר המצביעים, והצבע מציג את שיעור ההצבעה או תמיכה במפלגה נבחרת.
                 </p>
                 <p class="credits">
-                    כל הזכויות שמורות להראל קין |
+                    © הראל קין |
+                    <a href="https://creativecommons.org/licenses/by-nc-sa/4.0/" target="_blank">CC BY-NC-SA 4.0</a> |
                     <a href="https://github.com/harelc/elections-vote-transfer/" target="_blank">קוד מקור</a>
                 </p>
             </div>
