--- a/site/scatter.html
+++ b/site/scatter.html
@@ -834,17 +834,29 @@
                     lookupX[key] = s;
                 });
 
+                // Track which base keys have a .0 variant in Y
+                const yBaseKeys = new Set();
+                dataY.stations.forEach(s => {
+                    const ballot = String(s.b || s.ballot_number || '');
+                    if (ballot.endsWith('.0')) {
+                        yBaseKeys.add(this.normalizeKey(s));
+                    }
+                });
+
                 // Count matching stations per settlement
-                // Try exact match first, then fallback to base ballot (14.1 -> 14)
+                // Matching: exact first, then .1+ falls back to base only if no .0 sibling
                 dataY.stations.forEach(s => {
                     const key = this.normalizeKey(s);
                     let matched = lookupX[key];
 
                     // If no exact match, try base ballot fallback
                     if (!matched) {
-                        const baseKey = this.getBaseKey(key);
-                        if (baseKey !== key) {
-                            matched = lookupX[baseKey];
+                        const ballot = String(s.b || s.ballot_number || '');
+                        if (/\.[1-9]\d*$/.test(ballot)) {
+                            const baseKey = this.getBaseKey(key);
+                            if (!yBaseKeys.has(baseKey)) {
+                                matched = lookupX[baseKey];
+                            }
                         }
                     }
 
@@ -998,12 +1010,23 @@
 
             getBaseKey(key) {
                 // Convert "settlement|14.1" to "settlement|14"
-                // Only .1 subdivisions fall back to base, not .2, .3, etc.
+                // Used for fallback matching when .0 variant doesn't exist
                 const parts = key.split('|');
-                if (parts.length === 2 && parts[1].endsWith('.1')) {
-                    return parts[0] + '|' + parts[1].slice(0, -2);
+                if (parts.length === 2 && parts[1].includes('.')) {
+                    return parts[0] + '|' + parts[1].split('.')[0];
                 }
                 return key;
+            }
+
+            getSiblingZeroKey(key) {
+                // Convert "settlement|14.1" to "settlement|14.0"
+                // Used to check if .0 variant exists
+                const parts = key.split('|');
+                if (parts.length === 2 && /\.\d+$/.test(parts[1])) {
+                    const base = parts[1].split('.')[0];
+                    return parts[0] + '|' + base + '.0';
+                }
+                return null;
             }
 
             getPartyValue(station, partyName, unitsMode) {
@@ -1039,8 +1062,21 @@
                     };
                 });
 
+                // Build set of normalized Y keys to check for .0 siblings
+                // Note: .0 ballots normalize to base, so we track which bases have a .0 variant
+                const yBaseKeys = new Set();
+                dataY.stations.forEach(s => {
+                    const ballot = String(s.b || s.ballot_number || '');
+                    if (ballot.endsWith('.0')) {
+                        // This base has a .0 variant
+                        yBaseKeys.add(this.normalizeKey(s));
+                    }
+                });
+
                 // Find matching stations and build plot data
-                // Try exact match first, then fallback to base ballot (14.1 -> 14)
+                // Matching logic:
+                // - Exact match first (including 177.0 normalized to 177)
+                // - For .1+ subdivisions: fall back to base ONLY if no .0 sibling exists in Y
                 const plotData = [];
                 dataY.stations.forEach(s => {
                     const key = this.normalizeKey(s);
@@ -1048,9 +1084,14 @@
 
                     // If no exact match, try base ballot fallback
                     if (!matchedX) {
-                        const baseKey = this.getBaseKey(key);
-                        if (baseKey !== key) {
-                            matchedX = lookupX[baseKey];
+                        const ballot = String(s.b || s.ballot_number || '');
+                        // Only try fallback for .1+ subdivisions (not .0 which already normalized to base)
+                        if (/\.[1-9]\d*$/.test(ballot)) {
+                            const baseKey = this.getBaseKey(key);
+                            // Only fall back to base if no .0 sibling exists
+                            if (!yBaseKeys.has(baseKey)) {
+                                matchedX = lookupX[baseKey];
+                            }
                         }
                     }
 
